<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pakos.lcw.Welcome"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top">

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:contentDescription="@string/cont_desc_welcome_img"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/welcomeText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/welcomeText2"/>

    </LinearLayout>
</RelativeLayout>