<?xml version="1.0" encoding="utf-8"?>
<android.support.design.circularreveal.CircularRevealRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_curcular_id"
    >

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnableFooterFollowWhenLoadFinished="true"
        app:srlEnableScrollContentWhenLoaded="true"
        >

        <com.baoyz.swipemenulistview.SwipeMenuListView
            android:layout_width="match_parent"
            android:accessibilityPaneTitle="@string/paired_dev"
            android:layout_height="match_parent"
            android:id="@+id/swipe_device_list_view"></com.baoyz.swipemenulistview.SwipeMenuListView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonpairdevices"
        android:text="@string/pull_to_refresh"
        android:gravity="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paired_dev2"
        android:id="@+id/buttonpairdevices"
        android:layout_alignEnd="@+id/refreshLayout"
        android:layout_alignLeft="@id/refreshLayout"
        android:layout_alignBottom="@+id/refreshLayout"
        android:layout_alignRight="@+id/refreshLayout"
        android:background="@drawable/btn_royal"
        android:layout_alignStart="@+id/refreshLayout"
        android:textColor="@color/white"
        android:textSize="15sp">
    </Button>



</android.support.design.circularreveal.CircularRevealRelativeLayout>